JabberClient demo test

--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry exported="true" kind="lib" path="C:/Program Files/Java/jre7/lib/ext/mysql-connector-java-5.1.24-bin.jar"/>
 	<classpathentry exported="true" kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="F:/govokod/ATM_9/commons-lang3-3.1.jar"/>
+	<classpathentry kind="lib" path="commons-lang3-3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
